submitit/logs_submitit_enhanced/20250630_093939_TJR7_LG/352352_0_log.err
2025-06-30 09:39:41,109 |     INFO | [WORKER:enhanced_decoding_task_wrapper:215] | ================================================================================
2025-06-30 09:39:41,109 |     INFO | [WORKER:enhanced_decoding_task_wrapper:216] | === DÉBUT DU WORKER SUBMITIT - VERSION ENHANCED ===
2025-06-30 09:39:41,109 |     INFO | [WORKER:enhanced_decoding_task_wrapper:217] | ================================================================================
2025-06-30 09:39:41,109 |     INFO | [WORKER:enhanced_decoding_task_wrapper:220] | === DIAGNOSTICS SYSTÈME ===
2025-06-30 09:39:41,109 |     INFO | [WORKER:enhanced_decoding_task_wrapper:221] | Hostname: node19
2025-06-30 09:39:41,112 |     INFO | [WORKER:enhanced_decoding_task_wrapper:222] | Platform: Linux-6.1.0-23-amd64-x86_64-with-glibc2.36
2025-06-30 09:39:41,112 |     INFO | [WORKER:enhanced_decoding_task_wrapper:223] | Python version: 3.11.2 (main, May  2 2024, 11:59:08) [GCC 12.2.0]
2025-06-30 09:39:41,112 |     INFO | [WORKER:enhanced_decoding_task_wrapper:224] | Working directory: /home/tom.balay/Baking_EEG/submitit
2025-06-30 09:39:41,112 |     INFO | [WORKER:enhanced_decoding_task_wrapper:225] | User: tom.balay
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:226] | Home: /home/tom.balay
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:230] | CPU count: 64
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:231] | Memory: 251 GB
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:237] | === ARGUMENTS REÇUS ===
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | subject_identifier: TJR7
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | group_affiliation: CONTROLS_DELIRIUM
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | base_input_data_path: /mnt/data/tom.balay/data/Baking_EEG_data/
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | base_output_results_path: /home/tom.balay/results/Baking_EEG_results_V12
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | n_jobs_for_processing: 40
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | save_results_flag: True
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | generate_plots_flag: True
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | loading_conditions_config: {'LS_ALL': 'LS/', 'LD_ALL': 'LD/', 'GS_ALL': '/GS', 'GD_ALL': '/GD', 'LSGS': ['LS/GS'], 'LSGD': ['LS/GD'], 'LDGS': ['LD/GS'], 'LDGD': ['LD/GD']}
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | classifier_type: svc
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | use_grid_search_for_subject: False
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | param_grid_config_for_subject: None
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | cv_folds_for_gs_subject: 0
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | fixed_params_for_subject: {'svc': {'svc_c': 1.0, 'svc_kernel': 'linear', 'svc_gamma': 'scale', 'fs_percentile': 15, 'csp_n_components': 4}, 'logreg': {'logreg_c': 1.0, 'logreg_penalty': 'l2', 'fs_percentile': 15, 'csp_n_components': 4}, 'rf': {'rf_n_estimators': 100, 'rf_max_depth': None, 'fs_percentile': 75, 'csp_n_components': 8}}
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | compute_intra_subject_stats_flag: True
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | n_perms_for_intra_subject_clusters: 1024
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | compute_tgm_flag: False
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | cluster_threshold_config_intra_fold: {'start': 0.1, 'step': 0.1}
2025-06-30 09:39:41,113 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | use_csp_for_temporal_subject: False
2025-06-30 09:39:41,114 |     INFO | [WORKER:enhanced_decoding_task_wrapper:242] | use_anova_fs_for_temporal_subject: True
2025-06-30 09:39:41,114 |     INFO | [WORKER:enhanced_decoding_task_wrapper:245] | === CONFIGURATION PATH ===
2025-06-30 09:39:41,114 |     INFO | [WORKER:enhanced_decoding_task_wrapper:257] | Test du chemin: /home/tom.balay/Baking_EEG
2025-06-30 09:39:41,114 |     INFO | [WORKER:enhanced_decoding_task_wrapper:263] | ✓ Chemin valide trouvé: /home/tom.balay/Baking_EEG
2025-06-30 09:39:41,114 |     INFO | [WORKER:enhanced_decoding_task_wrapper:283] | sys.path initial: ['/home/tom.balay/Baking_EEG/submitit', '/usr/lib/python311.zip', '/usr/lib/python3.11']...
2025-06-30 09:39:41,114 |     INFO | [WORKER:enhanced_decoding_task_wrapper:287] | ✓ Chemin projet ajouté au sys.path: /home/tom.balay/Baking_EEG
2025-06-30 09:39:41,114 |     INFO | [WORKER:enhanced_decoding_task_wrapper:292] | sys.path après modification: ['/home/tom.balay/Baking_EEG', '/home/tom.balay/Baking_EEG/submitit', '/usr/lib/python311.zip', '/usr/lib/python3.11', '/usr/lib/python3.11/lib-dynload']...
2025-06-30 09:39:41,115 |     INFO | [WORKER:enhanced_decoding_task_wrapper:295] | === VALIDATION STRUCTURE ===
2025-06-30 09:39:41,115 |     INFO | [WORKER:enhanced_decoding_task_wrapper:305] | ✓ examples: /home/tom.balay/Baking_EEG/examples
2025-06-30 09:39:41,115 |     INFO | [WORKER:enhanced_decoding_task_wrapper:305] | ✓ run_decoding_script: /home/tom.balay/Baking_EEG/examples/run_decoding_one_lg.py
2025-06-30 09:39:41,115 |     INFO | [WORKER:enhanced_decoding_task_wrapper:305] | ✓ config: /home/tom.balay/Baking_EEG/config
2025-06-30 09:39:41,115 |     INFO | [WORKER:enhanced_decoding_task_wrapper:305] | ✓ utils: /home/tom.balay/Baking_EEG/utils
2025-06-30 09:39:41,115 |     INFO | [WORKER:enhanced_decoding_task_wrapper:312] | === TEST D'IMPORT ===
2025-06-30 09:39:41,115 |     INFO | [WORKER:enhanced_decoding_task_wrapper:314] | Import de run_decoding_one_lg...
2025-06-30 09:39:42,949 |    DEBUG | [WORKER:wrapper:305] | matplotlib data path: /home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/matplotlib/mpl-data
2025-06-30 09:39:42,958 |    DEBUG | [WORKER:wrapper:305] | CONFIGDIR=/home/tom.balay/.config/matplotlib
2025-06-30 09:39:42,959 |    DEBUG | [WORKER:<module>:1479] | interactive is False
2025-06-30 09:39:42,960 |    DEBUG | [WORKER:<module>:1480] | platform is linux
2025-06-30 09:39:43,989 |    DEBUG | [WORKER:wrapper:305] | CACHEDIR=/home/tom.balay/.cache/matplotlib
2025-06-30 09:39:44,010 |    DEBUG | [WORKER:_load_fontmanager:1543] | Using fontManager instance from /home/tom.balay/.cache/matplotlib/fontlist-v330.json
submitit ERROR (2025-06-30 09:39:46,184) - Submitted job triggered an exception
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/_submit.py", line 11, in <module>
    submitit_main()
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/submission.py", line 76, in submitit_main
    process_job(args.folder)
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/submission.py", line 69, in process_job
    raise error
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/submission.py", line 55, in process_job
    result = delayed.result()
             ^^^^^^^^^^^^^^^^
  File "/home/tom.balay/.venvs/py3.11_cluster/lib/python3.11/site-packages/submitit/core/utils.py", line 137, in result
    self._result = self.function(*self.args, **self.kwargs)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/tom.balay/Baking_EEG/submitit/submit_1patient_LG.py", line 315, in enhanced_decoding_task_wrapper
    from examples.run_decoding_one_lg import execute_single_subject_lg_decoding
  File "/home/tom.balay/Baking_EEG/examples/__init__.py", line 24, in <module>
    from .run_decoding_one_lg import execute_single_subject_lg_decoding
  File "/home/tom.balay/Baking_EEG/examples/run_decoding_one_lg.py", line 207
    epochs_object, returned_data_dict detected_protocols =  load_epochs_data_for_lg_decoding(
                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
